ICE-5749 fixed bug in URL mapping tool; enabled sprites generation by default; other small fixes