@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Djava.ext.dirs=lib;dist org.icefaces.util.cssurlmapper.Main "$@"
+java -cp lib/commons-cli-1.2.jar;dist/cssurlmapper.jar org.icefaces.util.cssurlmapper.Main "$@"
